# VaporTrack

./: .gitignore  .mxproject  CMakeLists.txt  README  a.md  commands.sh  openocd.cfg  vapor_track.ioc
.cache/clangd/index/: FreeRTOS.h.14AD70DDF56C4D51.idx  FreeRTOSConfig.h.7427B12A9955A34C.idx  auto.c.BBF24CA44E9D7B36.idx  auto.h.BCCD10AD41002A56.idx  cmsis_compiler.h.92D85AA75FE1703A.idx  cmsis_gcc.h.973B23DA838F5861.idx  cmsis_os.h.E9C0279CFD69F2AC.idx  cmsis_os2.c.64BABC34F6CFC7A5.idx  cmsis_os2.h.E24B9EFB288899E5.idx  cmsis_version.h.B6584C0DB6382AD9.idx  core_cm4.h.92CA71924D65A222.idx  croutine.c.7B539D15F2399229.idx  croutine.h.440D639B156ED760.idx  deprecated_definitions.h.2DCF68450D08718E.idx  event_groups.c.ED37BF7DCF550EC7.idx  event_groups.h.FD9CAB8B53EC6BBC.idx  freertos.c.B730A52C13D22525.idx  freertos_mpool.h.801DD4B9401E9DE7.idx  freertos_os2.h.726B98004E0FA0F6.idx  heap_4.c.9A3C3A0E62D3879A.idx  list.c.298FC5FF814A363B.idx  list.h.B5F3E81920920722.idx  main.c.52A24B9BBD23DA0F.idx  main.h.3819D83807B9F1D9.idx  mpu_armv7.h.DFF96D9C1D93FD4B.idx  mpu_wrappers.h.EFE6AD5B5E16B889.idx  port.c.086DDE3D469EAEA3.idx  portable.h.BCB091EC48E44178.idx  portmacro.h.AF2858037C0C4066.idx  projdefs.h.61B0C41F05586CF3.idx  queue.c.30DBDC4420D38D36.idx  queue.h.078B601B2738492B.idx  semphr.h.AE18F4826F6CF053.idx  stack_macros.h.C578134897693D3D.idx  startup_stm32f446xx.s.3B8190BADB49D729.idx  stm32_hal_legacy.h.DBAE37FE9D10522F.idx  stm32f446xx.h.CF7355D5092FE0F5.idx  stm32f4xx.h.1A21A07B50A7896C.idx  stm32f4xx_hal.c.6DCB8CEC942B3B84.idx  stm32f4xx_hal.h.2AD396829F6A4753.idx  (+49 more)
Core/Inc/: auto.h  main.h
Core/Src/: auto.c  main.c  stm32f4xx_hal_msp.c
cmake/stm32cubemx/: CMakeLists.txt
